--- a/intro-to-HTML-and-CSS/portfolio/portfolio.html
+++ b/intro-to-HTML-and-CSS/portfolio/portfolio.html
@@ -3,31 +3,31 @@
 <head>
   <meta charset="utf-8">
   <title>Framework Test Page</title>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-  <div class="grid">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col-6">
+      <div class="col-md-6">
         <img src="http://placehold.it/100x100" />
       </div>
-      <div class="col-6">
+      <div class="col-md-6 text-right text-uppercase">
         <h1>Chris Chao</h1>
-        <div>
-          Front-End Ninja
-        </div>
+        <h3>Front-End Ninja</h3>
       </div>
     </div>
     <div class="row">
-      <div class="col-12">
-        <img src="http://placehold.it/1200x300" alt="" />
+      <div class="col-md-12">
+        <img src="http://placehold.it/1200x300" alt="" class="img-responsive"/>
       </div>
     </div>
-    <h2 class="row">
-      Featured Work
-    </h2>
     <div class="row">
-      <div class="col-4">
+      <div class="col-md-12">
+        <h2>Featured Work</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
         <div class="work-thumbnail">
           <img src="http://placehold.it/250x250" alt="" />
         </div>
@@ -38,7 +38,7 @@
           hyperlink
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-md-4">
         <div class="work-thumbnail">
           <img src="http://placehold.it/250x250" alt="" />
         </div>
@@ -49,7 +49,7 @@
           hyperlink
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-md-4">
         <div class="work-thumbnail">
           <img src="http://placehold.it/250x250" alt="" />
         </div>
