--- a/intro-to-HTML-and-CSS/portfolio/portfolio.html
+++ b/intro-to-HTML-and-CSS/portfolio/portfolio.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Framework Test Page</title>
+  <link href='https://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
+  <script src="js/jquery-2.2.0.min.js" charset="utf-8"></script>
+  <script src="bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
 </head>
 <body>
   <div class="container-fluid">
@@ -12,7 +16,7 @@
         <img src="http://placehold.it/100x100" />
       </div>
       <div class="col-md-6 text-right text-uppercase">
-        <h1>Chris Chao</h1>
+        <h1 class="text-thin text-super">Chris Chao</h1>
         <h3>Front-End Ninja</h3>
       </div>
     </div>
@@ -23,41 +27,72 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <h2>Featured Work</h2>
+        <h2 class="text-muted">Featured Work</h2>
       </div>
     </div>
     <div class="row">
       <div class="col-md-4">
-        <div class="work-thumbnail">
-          <img src="http://placehold.it/250x250" alt="" />
-        </div>
-        <h3 class="work-title">
-          Appify
-        </h3>
-        <div class="work-link">
-          hyperlink
+        <img data-toggle="modal" data-target="#project1" class="img-responsive" src="http://placehold.it/250x250" alt="" />
+        <h2 class="text-uppercase">Appify</h2>
+        <a>hyperlink</a>
+        <!-- Modal -->
+        <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+              </div>
+              <div class="modal-body">
+                <img class="img-responsive" src="images/555.jpeg">
+                This was my first project in this class. I learned a lot about HTML and CSS.
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="work-thumbnail">
-          <img src="http://placehold.it/250x250" alt="" />
-        </div>
-        <h3 class="work-title">
-          Appify
-        </h3>
-        <div class="work-link">
-          hyperlink
+        <img data-toggle="modal" data-target="#project2" class="img-responsive" src="http://placehold.it/250x250" alt="" />
+        <h2 class="text-uppercase">Appify</h2>
+        <a>hyperlink</a>
+        <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+              </div>
+              <div class="modal-body">
+                <img class="img-responsive" src="images/555.jpeg">
+                This was my first project in this class. I learned a lot about HTML and CSS.
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="work-thumbnail">
-          <img src="http://placehold.it/250x250" alt="" />
-        </div>
-        <h3 class="work-title">
-          Appify
-        </h3>
-        <div class="work-link">
-          hyperlink
+        <img data-toggle="modal" data-target="#project2" class="img-responsive" src="http://placehold.it/250x250" alt="" />
+        <h2 class="text-uppercase">Appify</h2>
+        <a>hyperlink</a>
+        <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+              </div>
+              <div class="modal-body">
+                <img class="img-responsive" src="images/555.jpeg">
+                This was my first project in this class. I learned a lot about HTML and CSS.
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
